--- a/probar_indent_en_python.ipynb
+++ b/probar_indent_en_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5uhXaFqriP7WraYYi8Iga",
+      "authorship_tag": "ABX9TyMnKXYZEKItGS315Wd3zwAu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Probar el indent en Python con un if"
+        "# Probar el indent en Python con un if\n",
+        "\n",
+        "La sintaxis del de una condicional con if es if(*expresion*)"
       ],
       "metadata": {
         "id": "eOkOzoI3Ne4R"
@@ -37,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z5NOizSZNdQt",
-        "outputId": "8711ac4c-7883-4f50-f4ea-b240c341a1ed"
+        "outputId": "11e2e495-8bc9-4982-bfcd-e809599f1c01"
       },
       "outputs": [
         {
@@ -55,7 +57,7 @@
         }
       ],
       "source": [
-        "if 5 > 2:\n",
+        "if (5 > 2):\n",
         "  print(\"Cinco es mayor que 2!\")"
       ]
     },
