--- a/retos/reto_variables_numericas.ipynb
+++ b/retos/reto_variables_numericas.ipynb
@@ -28,8 +28,8 @@
     "\n",
     "## Resultado\n",
     "\n",
-    "La variable menor es var1\n",
-    "La variable mayor es var25\n",
+    "La variable menor es var2 con 15\n",
+    "La variable mayor es var1 con 50\n",
     "\n",
     "## Mostrar el notebook con el resultado y compartir\n",
     "\n"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc827362",
+   "id": "d6e4694b",
    "metadata": {},
    "source": [
     "## Solución\n"
@@ -45,17 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "24959023",
+   "execution_count": 65,
+   "id": "42c2f681",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inicializar variables\n",
     "var1 = 50\n",
-    "var2 = 35\n",
-    "var3 = 42\n",
-    "var4 = 75\n",
-    "var5 = 63\n",
+    "var2 = 10\n",
+    "var3 = 15\n",
+    "var4 = 30\n",
+    "var5 = 25\n",
     "\n",
     "mayor = 0\n",
     "menor = 100"
@@ -63,15 +63,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "3eda5e0e",
+   "execution_count": 66,
+   "id": "92f7e18f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La variable mayor es var4 : 75\n"
+      "La variable mayor es var1 : 50\n"
      ]
     }
    ],
@@ -102,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "bc375b0f",
+   "execution_count": 67,
+   "id": "56328c61",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
      "output_type": "stream",
      "text": [
       "menor 100\n",
-      "La variable menor es var2 : 35\n"
+      "La variable menor es var2 : 10\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9cd4829",
+   "id": "42cef50a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7cd7236",
+   "id": "7dc92a89",
    "metadata": {},
    "outputs": [],
    "source": []
