Update Reto 12 clase personas.ipynb

--- a/retos/Reto 12 clase personas.ipynb
+++ b/retos/Reto 12 clase personas.ipynb
@@ -18,8 +18,8 @@
     "\n",
     "## condiciones: \n",
     "No puede comer ni caminar cuando está dormido\n",
-    "Solo cuando está sano puede comer y caminar\n",
-    "\n",
+    "No puede comer ni caminar cuando está enfermo\n",
+        
     "Construir un objeto que simule los atributos, así como las funciones de una persona.\n",
     "Viualizar el estado de la persona; si está despierto; comiendo caminando, entre otros...\n",
     "Similar a la clase autos:\n"
